manifest_files/result_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: result-server
  template:
    metadata:
      labels:
        app: result-server
    spec:
      containers:
      - name: result-container
        image: muslumhanozturk/web:latest
        imagePullPolicy: Always        
        ports:
        - containerPort: 80
        resources: {}
