manifest_files/web_server_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web-server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-server
  template:
    metadata:
      labels:
        app: web-server
    spec: 
      containers:
      - name: web-container
        image: muslumhanozturk/web:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources: {}
