manifest_files/result_server_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: result-server-service
spec:
  selector:
    app: result-server
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30002
